--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -11,7 +11,7 @@ name: Gingersnap db-syncer - Build and publish
 on:
   push:
     branches:
-      - 'test_pipline'
+      - 'test_pipeline'
       
 env:
   GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}   
