--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -34,7 +34,6 @@ jobs:
 
       - name: Tag the release
         run: |
-          cd db-syncer
           ls la
           tree
           git tag -a v${{ env.release-version}} -m "Release db-syncer:: ${{ env.release-version}}"
@@ -67,6 +66,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
+          file: src/main/docker/Dockerfile.jvm
           platforms: linux/amd64,linux/arm64
           push: true
           tags: quay.io/pminz/db-syncer:${{ env.release-version }}
