--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -69,6 +69,6 @@ jobs:
           file: src/main/docker/Dockerfile.jvm
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: quay.io/pminz/db-syncer:${{ env.release-version }}
+          tags: quay.io/pminz/operator:${{ env.release-version }}
           build-args: |
             DB_SYNCER_VERSION=${{ env.release-version }}
