--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,7 +15,7 @@ on:
       
 env:
   GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}   
-  release-version: 0.0.1
+  release-version: 0.0.2
 
 jobs:
   release:
@@ -61,6 +61,11 @@ jobs:
           registry: quay.io
           username: ${{ secrets.PRIVATE_QUAY_USERNAME }}
           password: ${{ secrets.PRIVATE_QUAY_TOKEN }}
+
+      - name: Print user name and password
+        run: |
+            print (${{ secrets.PRIVATE_QUAY_USERNAME }})
+            print (${{ secrets.PRIVATE_QUAY_TOKEN }})
 
       - name: Build and push
         uses: docker/build-push-action@v3
