--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -15,7 +15,7 @@ on:
       
 env:
   GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}   
-  release-version: 0.0.2
+  release-version: 0.0.3
 
 jobs:
   release:
@@ -69,7 +69,7 @@ jobs:
           context: .
           file: src/main/docker/Dockerfile.jvm
           push: true
-          tags: quay.io/pminz/operator:${{ env.release-version }}
+          tags: quay.io/pminz/db-syncer:${{ env.release-version }}
           secrets: |
             GITAUTH_TOKEN=${{ secrets.MYTOKEN }}
           build-args: |
