--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,8 +10,9 @@ name: Gingersnap db-syncer - Build and publish
 
 on:
   push:
-    branches:
-      - 'test_pipeline'
+    # Pattern matched against refs/tags
+    tags:        
+      - '*'           # Push events to every tag not containing /
       
 env:
   GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}   
@@ -32,12 +33,12 @@ jobs:
         with:
           ref: ${{ github.event.inputs.ref }}
 
-      - name: Tag the release
-        run: |
-          ls -la
-          tree
-          git tag -a v${{ env.release-version}} -m "Release db-syncer:: ${{ env.release-version}}"
-          git push origin --tags
+      #- name: Tag the release
+      #  run: |
+      #    ls -la
+      #    tree
+      #    git tag -a v${{ env.release-version}} -m "Release db-syncer:: ${{ env.release-version}}"
+      #    git push origin --tags
 
       - name: Setup Java
         uses: actions/setup-java@v3
