--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          ssh-key: "${{ secrets.SSH_PRIVATE_KEY }}"
+          GITHUB_TOKEN: ${{ secrets.MY_TOKEN }} 
 
 
       #- name: Tag the release
