--- a/.github/workflows/create-tag.yaml
+++ b/.github/workflows/create-tag.yaml
@@ -8,7 +8,7 @@ on:
 env:
   GITHUB_TOKEN: ${{ secrets.MY_TOKEN }}   
   #ssh-key: "${{ secrets.SSH_PRIVATE_KEY }}"
-  release-version: 0.0.20
+  release-version: 0.0.21
 
 jobs:
   release:
@@ -30,5 +30,5 @@ jobs:
          ls -la
          tree
          git tag -a v${{ env.release-version}} -m "Release db-syncer:: ${{ env.release-version}}"
-         git push origin --tags
+         git push --tags
 
