--- a/.github/workflows/test_another_workflow.yaml
+++ b/.github/workflows/test_another_workflow.yaml
@@ -28,6 +28,6 @@ jobs:
           
       - name: Debug
         run: |
-         echo "Workflow was triggered successfully""
+         echo "Workflow was triggered successfully"
 
       
