--- a/.github/workflows/test_create_tag.yaml
+++ b/.github/workflows/test_create_tag.yaml
@@ -3,18 +3,18 @@ name: db-syncer -Create Tag
 on:
   workflow_call:
     inputs:
-      ref:
+      db-syncer-ref:
         type: string
         default: "release_pipeline"
       
 env:
   GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}  
-  release-version: ${{ github.event.inputs.ref }}
 
 jobs:
   tag:
     uses: pminz/db-syncer/.github/workflows/test_another_workflow.yaml@workflow_call
     with: 
-      ref: ${{ github.event.inputs.ref }} 
+      ref: ${{ github.event.inputs.db-syncer-ref }} 
+
 
          
