--- a/.github/workflows/test_another_workflow.yaml
+++ b/.github/workflows/test_another_workflow.yaml
@@ -24,7 +24,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         with: 
-          ref: ${{ github.event.inputs.ref }} 
+          ref: ${{ inputs.ref }} 
           
       - name: Debug
         run: |
