--- a/.github/workflows/test_create_tag.yaml
+++ b/.github/workflows/test_create_tag.yaml
@@ -14,7 +14,7 @@ jobs:
   tag:
     uses: pminz/db-syncer/.github/workflows/test_another_workflow.yaml@workflow_call
     with: 
-      ref: ${{ github.event.inputs.ref }} 
+      ref: ${{ inputs.ref }} 
 
 
          
