--- a/.github/workflows/test_another_workflow.yaml
+++ b/.github/workflows/test_another_workflow.yaml
@@ -6,7 +6,10 @@ on:
       ref:
         type: string 
         default: "release_pipeline"
-      
+      repo:
+        type: string
+        default: gingersnap/db-syncer
+         
 env:
   GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}  
   release-version: ${{ github.event.inputs.ref }}
@@ -25,6 +28,7 @@ jobs:
         uses: actions/checkout@v3
         with: 
           ref: ${{ inputs.ref }} 
+          repo: ${{ inputs.repo }}
           
       - name: Debug
         run: |
