--- a/.github/workflows/test_another_workflow.yaml
+++ b/.github/workflows/test_another_workflow.yaml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/checkout@v3
         with: 
           ref: ${{ inputs.ref }} 
-          repo: ${{ inputs.repo }}
+          repository: ${{ inputs.repo }}
           
       - name: Debug
         run: |
